ft(heroku): add CORS_ORIGIN_REGEX_WHITELIST

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-allauth = "*"
 djangorestframework-jwt = "*"
 django-rest-registration = "*"
 django-cors-headers = "*"
+python-decouple = "*"
 
 [dev-packages]
 
