--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ djangorestframework-jwt = "*"
 django-rest-registration = "*"
 django-cors-headers = "*"
 python-decouple = "*"
+gunicorn = "*"
 
 [dev-packages]
 
