--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-rest-registration = "*"
 django-cors-headers = "*"
 python-decouple = "*"
 gunicorn = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
