--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ django-cors-headers = "*"
 python-decouple = "*"
 gunicorn = "*"
 dj-database-url = "*"
-"psycopg2" = "*"
+"psycopg2-binary" = "*"
 
 [dev-packages]
 
